Makes background image fixed

--- a/css/bmun-theme.css
+++ b/css/bmun-theme.css
@@ -10,6 +10,7 @@ body {
 	background-image:url(../img/BG_Logo.png);
 	background-repeat:no-repeat;
 	background-position: center center;
+	background-attachment: fixed;
 
 }
 
