--- a/css/bmun-theme.css
+++ b/css/bmun-theme.css
@@ -71,14 +71,14 @@ hr.bottom {
 }
 
 #myNavbar * {
-	background-color: #0F4D92;
+	background-color: #002854;
 	color: White;
 	font-family: Century Gothic;
 }
 
 #myNavbar a:link,
 #myNavbar a:visited {
-	background-color: #0F4D92;
+	background-color: #002854;
 	color: White;
 }
 
@@ -90,8 +90,14 @@ hr.bottom {
 
 #myNavbar a:hover > .caret,
 #myNavbar a:active > .caret {
-	color: #0F4D92;
+	color: #002854;
 	background-color: White;
+}
+
+.navbar-date {
+	padding: 15px;
+	font-style: italic;
+	font-weight: bold;
 }
 
 .navbar-img {
@@ -140,4 +146,38 @@ hr.bottom {
 	vertical-align: middle;
 	display:block;
 	margin:auto;
+}
+
+.banner-wrapper {
+	max-width: 100%;
+	height: auto;
+	width: auto;
+}
+
+.banner-img-background img {
+	max-width: 100%;
+	height: auto;
+	width: auto;
+}
+
+.banner-img-logo {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.banner-img-logo img {
+	position:relative;
+	padding: 100px;
+	max-width: 40%;
+	height: auto;
+	right: -60%;
+}
+
+.banner-img-logo p {
+	position:relative;
+	font-size: x-large;
+	font: ;
 }
