--- a/static/css/bmun-theme.css
+++ b/static/css/bmun-theme.css
@@ -128,6 +128,10 @@ hr.bottom {
 	padding-bottom: 10px;
 }
 
+.committee-heading {
+	font-weight: 500;
+}
+
 .anchor {
 	padding-top: 55px;
 	margin-top: -55px;
